fixed scrolling issues on ios

--- a/css/my_main.css
+++ b/css/my_main.css
@@ -387,6 +387,7 @@ svg:not(:root) {
     vertical-align: middle;
     height: 100%;
     max-width: none;
+    background-color: rgba(255, 255, 255, 0.1);
 }
 
 .tabb {
@@ -446,9 +447,9 @@ h3 {
 .con-content
 {
     display: inline-block;
-
     margin-top: 100px;
 }
+
 /*................*/
 
 .land-back{
@@ -456,8 +457,9 @@ h3 {
     position: absolute; 
     width: 100%;
     height: 100%;
-    z-index: -1;  
+    z-index: -10;  
     min-height: 740px;
+    overflow-y: hidden;
 }
 
 anim {
